--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -48,11 +48,11 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Project team**     | Claudi Bockting, PhD, in collaboration with Maaike Nauta, PhD (RuG), Yvonne Stikkelbroek, Phd (Universiteit Utrecht/ GGZ Oost Brabant); Gerard van Rijsbergen, PhD (GGZ Drenthe) |
 | **APH site**     | AMC |
 | **Project(s)**       | 1) 'Imagine Your Mood' study (IYM; 2012-2017; @Slofstra2017): This was a three-arm RCT evaluating several relapse prevention strategies in remitted depressed patients.
-|                      | 2) STAY-FINE study (ongoing; http://stayfine.nl/): this RCT aims to evaluate a smartphone-based intervention (EMI) to prevent relapse in young people (12-23 yrs.) with remitted anxiety or depression. The study is funded by ZonMW (see http://tinyurl.com/yb2qr6ro).
+|                      | 2) STAY-FINE study (ongoing; http://stayfine.nl/): this RCT aims to evaluate a smartphone-based intervention (EMI) to prevent relapse in young people (12-23 yrs.) with remitted anxiety or depression. The study is funded by ZonMW (see <http://tinyurl.com/yb2qr6ro>).
 | **EMA Measures**     | In the IYM RCT, EMA items included mood, positive affect (PA, 5 items), negative affect (NA, 9 items) and mental imagery (2 items). Participants were prompted 10 times per day, 3 days a week, over a period of 8 weeks. Prompts were sent randomly within fixed time-intervals.  The VAS mood scale used (*‘Please rate your current mood on a scale of 0 to 100’*, on which 0 indicates ‘happy’, and 100 indicates ‘sad’), was shown to have a high positive predictive value without any false negatives at a cut-off score of 55 [@Vanrijsbergen2014]. Compared to the HAM-D17 and the IDS-SR, the VAS also was a better predictor of current relapse status, as measured by the SCID-1 interview (variance explained for VAS: 60%; HAM-D17: 49%; IDS-SR: 34%). 
 |                      | | 
 |                      | In the STAY-FINE RCT, The aim is to test whether EMA +  EMI is more effective in preventing relapse in comparison to EMA alone. Structured clinical interviews will be conducted to assess the clinical status of participants. EMA will be used to monitor outcomes (for three weeks) at six assessment periods (between baseline and 36-month follow-up), in N = 212 participants. Polar watches will be used to collect passive activity measurement data. Prior to the main study, a feasibility study of the app will be conducted. |
-| **Platforms used**   | Psymate, Roqua (See also Chapter \@ref(ema-instruments-catalogue)), ‘Imagine your mood’ app & STAY-FINE app (custom development), Polar watches (http://www.polar.com/nl).|
+| **Platforms used**   | Psymate, Roqua (see also Chapter \@ref(ema-instruments-catalogue)), ‘Imagine your mood’ app & STAY-FINE app (custom development), Polar watches (http://www.polar.com/nl).|
 | **Contact**          | http://www.amc.nl/web/research-75/person-1/prof.-dr.-c.l.h.-bockting-phd.htm
 |                      | http://claudibockting.com |
 |                      | http://stayfine.nl/ |
@@ -276,11 +276,11 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |:---------------|:-------------------------------------------------------------|
 | **Team** | Eco de Geus, PhD; Gonneke Willemsen, PhD; Martin Gevonden, PhD; Denise van der Mee, MSc, Mandy Tjew-A-Sin, MSc; Cor Stoof, MSc |
 | **APH site** | VU |
-| **Project** | VU-AMS was developed at the department of Biological Psychology of the Vrije Universiteit Amsterdam. The system is used worldwide by many research groups, to study stress and emotion in both laboratory and naturalistic settings [@DeGeus1995; @Geus1996; @Willemsen1996]. VU-AMS has been used in the study of ADHD, aggression, anxiety and depressive disorders, mental, social and work-related stress, circadian rhythms, hyperventilation, migraine, sleep, and in studies linking the autonomic nervous system to metabolic and immunological risk factors (see http://www.vu-ams.nl/research/publications/ and http://www.vu-ams.nl/research/phd-theses/). Current projects include: 
+| **Project** | VU-AMS was developed at the department of Biological Psychology of the Vrije Universiteit Amsterdam. The system is used worldwide by many research groups, to study stress and emotion in both laboratory and naturalistic settings [@DeGeus1995; @Geus1996; @Willemsen1996]. VU-AMS has been used in the study of ADHD, aggression, anxiety and depressive disorders, mental, social and work-related stress, circadian rhythms, hyperventilation, migraine, sleep, and in studies linking the autonomic nervous system to metabolic and immunological risk factors (see <http://www.vu-ams.nl/research/publications/> and <http://www.vu-ams.nl/research/phd-theses/>). Current projects include: 
 |         | 1)	Validation of a wristwatch-based technology, developed by Philips, to measure skin conductance responses in a laboratory (~2.5 h) and ambulatory (~22h, including the night) setting on a total of 100 subjects (van der Mee et al., ongoing, 2017 - 2021). The goal is to test whether wrist based (Philips) and palm based (VU-AMS) measured skin conductance responses accord, how these measures relate to the heart based measured pre-ejection period (PEP, VU-AMS) and whether it can be related to positive and negative affect (hourly diary prompts). The end goal for the wrist based technology is to detect sympathetic nervous system activity (measured as skin conductance responses) and present this information to the person’s as an index of the current stress level, alongside a one-hour prediction of changes in stress level and cognitive functioning (Cognitive Zone Changes;  http://www.ip.philips.com/licensing/program/121) |
 |         | 2)	Ambulatory study on self-regulation among youth (Tjew A Sin et al., 2018-2019). This study is conducted at the schools as part of the NeuroLab project. A total of 50 students, will wear the VU-AMS device for approximately 22 hours. Autonomic nervous system activity is collected continuously over the course of a regular school day (including the night and morning thereafter) and will be related to multiple components of self-regulation, including emotion-regulation, cognitive functioning, impulsivity and inhibition  |
 | **EMA measures** | The VU-AMS device is a battery powered wearable that can record up to 48 hours of data (4GB storage). It measures the electrocardiogram, the impedance cardiogram, and skin conductance. With VU-AMS, the following outcomes can be collected: Heart Rate / Inter beat Interval (IBI), Heart Rate Variability (SDNN, RMSSD, IBI power spectrum: HF, LF), Respiratory Sinus Arrhythmia (RSA), Pre-Ejection Period (PEP), T-wave amplitude (TWA), Left Ventricular Ejection Time (LVET), Stroke Volume (SV) and Cardiac Output (CO), Respiration Rate (RR), Skin Conductance Level (SCL) and Skin Conductance Responses (SCRs), Movement (Hip-worn tri-axial accelerometer signals (g). |
-|                 | The freely available 'Data Analysis and Management System' (DAMS) package is used for extraction and processing of VU-AMS data (see http://www.vu-ams.nl/support/downloads/software/). The DAMS tool offers options for data inspection (visual inspection of raw data), automated detection of R-peaks in raw ECG signal and visual inspection of final IBI time series, event/diary-based data labeling, IBI spectral power calculation, automated scoring of RR, RSA, and PEP from the combined ECG. 
+|                 | The freely available 'Data Analysis and Management System' (DAMS) package is used for extraction and processing of VU-AMS data (see <http://www.vu-ams.nl/support/downloads/software/>). The DAMS tool offers options for data inspection (visual inspection of raw data), automated detection of R-peaks in raw ECG signal and visual inspection of final IBI time series, event/diary-based data labeling, IBI spectral power calculation, automated scoring of RR, RSA, and PEP from the combined ECG. 
 | **Platform(s) used** | VU-AMS / DAMS (see Chapter \@ref(ema-instruments-catalogue).|  
 | **Contact** | http://research.vu.nl/en/persons/jcn-de-geus |
 |             | http://research.vu.nl/en/persons/ahm-willemsen | 
